tests/snapshots/execution_spec__caching.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  fieldCache: Type
  fieldCacheList: [Type]
  typeCache: TypeCache
}

type Type {
  id: Int
}

type TypeCache {
  a: Type
  b: Type
  list: [Type]
}

scalar Url

schema {
  query: Query
}
