tests/snapshots/execution_spec__call-graphql-datasource.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Post {
  body: String!
  id: Int!
  title: String!
  user: User
  userId: Int!
}

type Query {
  posts: [Post]
  user(id: Int!): User
}

scalar Url

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  username: String!
  website: String
}

schema {
  query: Query
}
