tests/snapshots/execution_spec__call-multiple-steps-piping.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Query {
  a(input: JSON): JSON @const(data: "{{args.input.a}}")
  abc(input: JSON): JSON @call(steps: [{query: "a", args: {input: "{{args.input}}"}}, {query: "b"}, {query: "c"}])
  b: JSON @const(data: "{{args.b}}")
  c: JSON @const(data: "{{args.c}}")
}
