tests/snapshots/execution_spec__call-multiple-steps-piping.md_test_1.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "abc": 3
    }
  }
}
