tests/snapshots/execution_spec__call-multiple-steps.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "abc": ""
    }
  }
}
