tests/snapshots/execution_spec__call-mutation.md_assert_2.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "connectPostToFirstUser": {
        "name": "foo"
      }
    }
  }
}
